deployment/uit/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
        - name: api-gateway-service
          image: nginx
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: api-gateway-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: api-gateway-conf
          configMap:
            name: api-gateway-conf
            items:
              - key: nginx.conf
                path: nginx.conf
