deployment/uit/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: service
